--- a/Kitucxa/src/main/resources/application.properties
+++ b/Kitucxa/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/kitucxa?serverTimezone=GMT
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=242999
 spring.datasource.initialization-mode=always
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
